--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "shortid": "^2.2.16",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -21,7 +22,6 @@
     "prepare": "husky install",
     "deploy": "gh-pages -d build",
     "predeploy": "npx prettier --write . && npm run build"
-    
   },
   "eslintConfig": {
     "extends": [
